# shaddoc

./: .gitignore  LICENSE  README.md
plan/: 2020.2.org
src/: CMakeLists.txt
src/parser/: CMakeLists.txt  md-parser.y  md-preprocesser.cpp  md-scanner.l  md-type.cpp  md-type.hpp
test_data/: h1h2.md  preprocess.md  scanner.md
